a few fixed things

--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
   <body>
     <header class="main-navigation">
       <nav>
-        <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
-        <ul>
+        <ul class="first-navi">
+          <li>
+            <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
+          </li>
           <li><a class="main-link" href="">Studio</a></li>
           <li><a class="main-link" href="">Portfolio</a></li>
           <li><a class="main-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="main-address">
+        <ul class="second-navi">
           <li>
-            <a class="mail-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="main-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="tel-info" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="main-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -60,22 +62,22 @@
       <section class="our-team">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="our-team-list">
             <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero Product Designer" width="264" />
             <h3 class="text-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img src="./images/tom-ford.jpg" alt="Tom Ford Frontend Developer" width="264" />
             <h3 class="text-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img src="./images/camila-garcia.jpg" alt="Camila Garcia Marketing" width="264" />
             <h3 class="text-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson UI Designer" width="264" />
             <h3 class="text-title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
@@ -119,7 +121,7 @@
       </section>
     </main>
     <footer class="info">
-      <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
+      <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
