--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav>
         <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
         <ul class="first-navi">
-          <li><a class="main-link" href="">Studio</a></li>
+          <li><a class="main-link" href="./index.html">Studio</a></li>
           <li><a class="main-link" href="">Portfolio</a></li>
           <li><a class="main-link" href="">Contacts</a></li>
         </ul>
@@ -120,7 +120,7 @@
     </main>
     <footer class="info">
       <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <p class="info-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
 </html>
